--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <script>
   /* ========== CONFIG SUPABASE ========== */
-  const SUPABASE_URL = "https://sfappoqwuunkpipegzra.supabase.co";
+  const SUPABASE_URL = "https://sfippoqwuunkpipegzra.supabase.co";
   const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNmaXBwb3F3dXVua3BpcGVnenJhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE3NDMyODcsImV4cCI6MjA3NzMxOTI4N30.p7iiJxu-sWNgpTRMWOSQDkf2poK4q6B1FSlt6XKv25E";
   const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
@@ -427,6 +427,7 @@
 
 </body>
 </html>
+
 
 
 
