--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>📚 Materias Diarias 1er commit</title>
+  <title>📚 Materias Diarias 2do commit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Supabase -->
